# lwirth-lib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  lwirth-lib.sln  todo.txt
libraries/: CMakeLists.txt
libraries/glfw/: CMakeLists.txt
libraries/stb/: stb_image.h
libraries/vulkan/macOS/macOS/Frameworks/vulkan.framework/Versions/A/: vulkan
libraries/vulkan/macOS/macOS/etc/vulkan/explicit_layer.d/: VkLayer_core_validation.json  VkLayer_object_tracker.json  VkLayer_parameter_validation.json  VkLayer_threading.json  VkLayer_unique_objects.json
libraries/vulkan/macOS/macOS/lib/: libVkLayer_object_tracker.dylib  libVkLayer_parameter_validation.dylib  libVkLayer_threading.dylib  libVkLayer_unique_objects.dylib
lwirth-lib/: Allocations.cpp  Allocations.hpp  Angle.cpp  Angle.hpp  Application.cpp  Application.hpp  Array.hpp  CMakeLists.txt  Chain.cpp  Chain.hpp  Chrono.cpp  Chrono.hpp  Circle.cpp  Circle.hpp  Color.cpp  Color.hpp  DifferentiableFunction.cpp  DifferentiableFunction.hpp  DynamicArray.hpp  Exceptions.cpp  Exceptions.hpp  FileManager.cpp  FileManager.hpp  Frame.cpp  Frame.hpp  Geometry.hpp  Info.txt  Line.cpp  Line.hpp  LinearAlgebra.hpp  List.hpp  Logger.cpp  Logger.hpp  Math.hpp  Matrix.hpp  Matrix2x2.hpp  Matrix4x4.cpp  Matrix4x4.hpp  MersenneTwister.hpp  Meta.hpp  (+95 more)
lwirth-lib/experimental/: experimental.cpp  experimental.hpp
lwirth-lib/general/: Application.cpp  Application.hpp  Exceptions.cpp  Exceptions.hpp  FileManager.cpp  FileManager.hpp  Logger.cpp  Logger.hpp  Meta.hpp  Root.cpp  Root.hpp  SIMD.cpp  SIMD.hpp  Utils.cpp  Utils.hpp
lwirth-lib/graphics/: Color.cpp  Frame.cpp  Frame.hpp  RenderWindow.cpp  RenderWindow.hpp  Renderer.cpp  Renderer.hpp  SimpleBrush2D.cpp  SimpleBrush2D.hpp  SimpleBrush3D.cpp  SimpleBrush3D.hpp  Texture.cpp  Vertices.cpp  Vertices.hpp  Visualizer.cpp  Vulkan.cpp  Vulkan.hpp
lwirth-lib/graphics/vulkan/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommands.cpp  VulkanCommands.hpp  VulkanDepthImage.cpp  VulkanDepthImage.hpp  VulkanDescriptors.cpp  VulkanDescriptors.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFence.cpp  VulkanFence.hpp  VulkanHelper.cpp  VulkanHelper.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanPhysicalDevices.cpp  VulkanPhysicalDevices.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanQueues.cpp  VulkanQueues.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanSemaphore.cpp  VulkanSemaphore.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
lwirth-lib/machine_learning/: NeuralNetwork.cpp  NeuralNetwork.hpp
lwirth-lib/math/: Circle.cpp  DifferentiableFunction.cpp  DifferentiableFunction.hpp  Line.cpp  Line.hpp  Matrix.hpp  Plane.cpp  Plane.hpp  Shape.cpp  Shape.hpp  Triangle.cpp  Vector.hpp  VectorField2D.cpp  VectorField2D.hpp  qmath.cpp  qmath.hpp
lwirth-lib/memory/: Allocations.cpp  Allocations.hpp  List.hpp  StackAllocator.hpp
lwirth-lib/physics/: PhysicalUnit.cpp  PhysicalUnit.hpp
lwirth-lib/random/: MersenneTwister.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Random.cpp  Random.hpp
lwirth-testing/: Boi.hpp  CMakeLists.txt  CellSystem.hpp  GFX.hpp  Main.cpp  lwirth-testing.vcxproj  lwirth-testing.vcxproj.filters  vulkanTest.hpp
lwirth-testing/tests/: CellSystem.cpp  SortingTest.hpp  UtilsTests.hpp  VulkanTest.hpp  VulkanTrianglesTest.hpp
lwirth-testing/tests/cogi/: Cogi.hpp  CogiSim.cpp  CogiSim.h
lwirth-testing/tests/cogi/Cogicorpus/: CorpusManager.cpp  CorpusManager.h
lwirth-testing/tests/cogi/Graphics/: Camera.cpp  Camera.h  CogiRen.cpp  CogiRen.h
lwirth-testing/tests/cogi/Items/: Crafting.cpp  Crafting.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h
lwirth-testing/tests/cogi/World/: Terrain.cpp  Terrain.h
lwirth-testing/tests/vulkan/: VulkanTest.hpp
lwirth-vanilla/: lwirth-vanilla.vcxproj  main.cpp
res/shaders/: 2Dshader.vert  2Dshadervert.spv  compile.bat  frag.spv  shader.vert  vert.spv
src/: CMakeLists.txt  Info.txt  Standard.hpp
src/algorithm/: Sorting.hpp
src/general/: Application.cpp  Logger.cpp
src/graphics/: Color.hpp  RenderWindow.cpp  RenderWindow.hpp  SimpleBrush2D.cpp  SimpleBrush3D.cpp  Texture.hpp  Visualizer.cpp
src/graphics/vulkan/: VulkanBuffer.hpp  VulkanCommands.cpp  VulkanDepthImage.cpp  VulkanDescriptors.cpp  VulkanDescriptors.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFence.cpp  VulkanFence.hpp  VulkanImage.cpp  VulkanInstance.cpp  VulkanPhysicalDevices.hpp  VulkanPipeline.hpp  VulkanQueues.cpp  VulkanQueues.hpp  VulkanRenderPass.hpp  VulkanSemaphore.cpp  VulkanSwapchain.hpp
src/machine_learning/: NeuralNetwork.hpp
src/math/: Circle.cpp  Circle.hpp  Line.cpp  Math.hpp  Plane.cpp  Triangle.cpp  Triangle.hpp  VectorField2D.cpp  qmath.cpp  qmath.hpp
src/memory/: Allocations.cpp  Array.hpp  List.hpp  PoolAllocator.hpp
src/random/: MersenneTwister.hpp  PerlinNoise.cpp  Random.cpp
tests/: CMakeLists.txt
tests/tests/: CellSystem.hpp  NeuralNetworkTest.hpp  WindowsHTest.hpp
tests/tests/vulkan/: Triangles.hpp
