set(EIGEN_DIR "${PROJECT_SOURCE_DIR}/libraries/eigen-git-mirror")
add_subdirectory(${EIGEN_DIR})
set(STB_DIR "${PROJECT_SOURCE_DIR}/libraries/stb" PARENT_SCOPE)

set(GLFW_DIR "${PROJECT_SOURCE_DIR}/libraries/glfw")
set(GLFW_BUILD_EXAMPLES OFF CACHE INTERNAL "Build the GLFW example programs")
set(GLFW_BUILD_TESTS OFF CACHE INTERNAL "Build the GLFW test programs")
set(GLFW_BUILD_DOCS OFF CACHE INTERNAL "Build the GLFW documentation")
set(GLFW_INSTALL OFF CACHE INTERNAL "Generate installation target")
set(GLFW_VULKAN_STATIC OFF CACHE INTERNAL "Use the Vulkan loader statically linked into application")
add_subdirectory(${GLFW_DIR})
set(GLFW_LIBRARY "glfw" PARENT_SCOPE)

set(Vulkan_DIR "${PROJECT_SOURCE_DIR}/libraries/vulkanAPI")
if(WIN32)
    set(Vulkan_LIBRARY "${Vulkan_DIR}/windows/Lib32/vulkan-1.lib" PARENT_SCOPE)
    set(Vulkan_INCLUDE_DIR "${Vulkan_DIR}/windows/Include" PARENT_SCOPE)
elseif(APPLE)
    set(VULKAN_SDK "${Vulkan_DIR}/macOS" PARENT_SCOPE)
    set(Vulkan_LIBRARY "${Vulkan_DIR}/macOS/MoltenVK/macOS/libMoltenVK.dylib" PARENT_SCOPE)
    set(Vulkan_INCLUDE_DIR "${Vulkan_DIR}/macOS/MoltenVK/include" PARENT_SCOPE)
endif()

